share/static/alice-default.css
/* ... */
div.editor img {
  display: none !important; }

div#input input.send {
  display: none; }

body.blurred ul#tabs {
  background: #eeeeee; }

ul#tabs {
  list-style: none;
  margin: 0;
  padding: 0;
  font-size: 11px;
  position: absolute;
  bottom: 0px;
  height: 24px;
  overflow: hidden;
  background-color: #dddddd;
  left: 0px;
  padding-left: 3px;
  right: 72px; }

body.blurred ul#tabs li {
  background: #eeeeee;
  color: #777777; }

ul#tabs li {
  float: left;
  margin: 0;
  margin-left: -1px;
  color: #333333; }

ul#tabs li.hidden {
  display: none; }

ul#tabs li.visible {
  display: block; }

body.blurred ul#tabs li:first-child div.hit_area {
  border-left: 1px solid #eeeeee; }

ul#tabs li:first-child div.hit_area {
  border-left: 1px solid #dddddd; }

ul#tabs li div.hit_area {
  border: 1px solid #999999;
  border-bottom: none;
  border-top: none;
  float: left;
  height: 14px;
  padding: 3px 10px 8px 4px; }

body.blurred ul#tabs li div.hit_area {
  border: 1px solid #aaaaaa;
  border-bottom: none;
  border-top: none; }

body.blurred ul#tabs li.active div.hit_area {
  border: 1px solid #aaaaaa;
  -webkit-border-bottom-left-radius: 1px;
  -webkit-border-bottom-right-radius: 1px;
  border-top: none; }

ul#tabs li.active div.hit_area {
  border: 1px solid #999999;
  border-top: none;
  background: #efefef;
  height: 11px;
  padding-top: 4px;
  margin-top: -1px; }

ul#tabs li:not(.active) {
  z-index: 900 !important; }

ul#tabs li.active {
  height: 24px;
  z-index: 903;
  background: #dddddd; }

ul#tabs li.active:hover div.hit_area {
  background: #efefef; }

ul#tabs li:hover div.hit_area {
  background: #cccccc; }

ul#controls {
  position: absolute;
  bottom: 0px;
  right: 0px;
  height: 23px;
  margin: 0;
  padding: 0 2px 0 0;
  list-style: none; }

ul#controls > li {
  float: right;
  margin: 0;
  padding: 0;
  height: 16px;
  width: 16px;
  padding: 4px 3px 3px 3px; }

ul#controls > li:hover {
  background-color: #cccccc; }

div.topic {
  position: absolute;
  top: 0px;
  left: 0px;
  right: 0px;
  background: #efefef;
  font-size: 11px;
  text-align: center;
  border-top: 1px solid white;
  border-bottom: 1px solid #aaaaaa;
  padding: 1px 0;
  height: 1.2em;
  overflow: hidden;
  z-index: 901; }

div.topic {
  text-decoration: none; }

ul.messages {
  list-style: none;
  margin: 0;
  padding: 3px 0;
  margin: 0;
  position: absolute;
  overflow-x: hidden;
  overflow-y: auto;
  top: 17px;
  bottom: 0px;
  right: 0px;
  left: 0px; }

ul.messages > li {
  font-size: 13px;
  display: block;
  position: relative;
  background-color: #eaeaea; }

ul.messages > li:not(.consecutive) {
  clear: both; }

ul.messages li.highlight div.msg {
  border-right: 3px solid #eb2222; }

.info ul.messages li.highlight,
ul.messages li.self {
  background: #fffbd0;
  border-right: none; }

.info ul.messages li.highlight div.msg,
ul.messages li.self div.msg {
  background: #fffbd0; }

ul.messages li div.msg {
  background: white; }

ul.messages li.consecutive div.left {
  opacity: 0px;
  height: 0px;
  position: absolute;
  left: -1000px; }

div.left {
  float: left;
  width: 95px;
  overflow: hidden;
  font-weight: bold;
  text-align: right;
  padding: 4px 0;
  padding-right: 4px;
  padding-bottom: 0;
  text-overflow: ellipsis;
  position: relative;
  text-wrap: none;
  white-space: nowrap;
  -khtml-nbsp-mode: space; }

li.event a,
li.event {
  color: black; }

li.event div.left {
  padding-top: 5px; }

li.event div.msg {
  border-top: none; }

ul.messages li.avatar div.left {
  padding-bottom: 3px;
  padding-top: 3px; }

li.event div.left {
  padding: 5px 0;
  width: 95px; }

li.event div.left span.timestamp {
  opacity: 0;
  -webkit-transition: opacity 0.1s ease-in-out; }

ul.messages li.avatar:not(.consecutive) {
  z-index: 800; }

div.left img {
  border: 1px solid white;
  max-width: 32px;
  max-height: 32px;
  float: right;
  display: block; }

ul.messages li.avatar span.nick {
  position: absolute;
  z-index: 801;
  right: 5px;
  top: 4px;
  padding: 0 2px;
  min-width: 28px;
  background: rgba(0, 0, 0, 0.5);
  color: #fff;
  text-shadow: black 0 1px 1px;
  opacity: 0;
  -webkit-transition: opacity 0.5s ease-in-out; }

div.timehint {
  font-size: 10px;
  float: right;
  padding: 6px 4px 2px 4px;
  color: #555555;
  margin-top: 1px;
  opacity: 0;
  text-shadow: white 0 0 3px; }

.info ul.messages li.highlight div.timehint,
li.self div.timehint {
  background: #fffbd0; }

div.msg {
  margin-left: 100px;
  min-height: 1.2em;
  padding: 3px 5px;
  word-wrap: break-word;
  -khtml-line-break: after-white-space;
  -khtml-nbsp-mode: space;
  border-top: 1px solid #eeeeee;
  border-left: 1px solid #c1c1c1; }

li.fold {
  border-bottom: 1px solid #cccccc; }

li.fold + li div.msg {
  border-top: none !important; }

li.event div.msg {
  padding: 5px; }

li.monospaced div.msg {
  padding: 5px; }

li.event + li.message div.msg {
  border-top: 1px solid transparent; }

ul.messages li:first-child div.msg {
  border-top: 1px solid transparent; }

/* so the last avatar doesn't hang off the edge */
ul.messages li.avatar:not(.consecutive) div.msg {
  min-height: 35px; }

ul.messages li.monospaced.avatar:not(.consecutive) div.msg {
  min-height: 24px; }

ul.messages li.monospaced {
  min-height: 0px; }

ul.messages li.message:last-child {
  border-bottom: 1px solid #eeeeee; }

ul.messages li.consecutive div.msg {
  border-top: none; }

ul.messages li + li.consecutive div.msg {
  padding-top: 0px; }

div.msg a {
  word-break: break-all; }

div.msg img {
  border: none;
  max-width: 300px;
  max-height: 300px; }

ul.messages li.monospaced + li.monospaced.consecutive {
  padding-top: 0px;
  padding-bottom: 0px; }

ul.messages li.monospaced div.msg {
  font-family: Monaco, monospace;
  font-size: 10px;
  line-height: 12px;
  word-wrap: normal;
  white-space: pre-wrap; }

li.monospaced div.msg span[style*="bold"] {
  letter-spacing: -1px; }
/* ... */

